# tmt-copr

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.distro/: python-tmt-copr.spec
.distro/plans/: full.fmf  main.fmf.dist-git
.github/: codecov.yml  renovate.json
.github/workflows/: ci.yaml  release.yaml  step_build-wheel.yaml  step_docs.yaml  step_pre-commit.yaml  step_test.yaml
docs/: conf.py  index.md
src/tmt_copr/: __init__.py  discover.py  framework.py
test/: pytest.fmf
test/integration/: main.fmf
test/integration/lint/: main.fmf  test.sh
test/integration/lint/data/: main.fmf
test/smoke/: help.fmf  help.sh  main.fmf
test/unit/: test_smoke.py
